--- a/README.Rmd
+++ b/README.Rmd
@@ -50,10 +50,11 @@ install.packages(
 
 ### R
 
-``` r
-CentroidR::centroid_one_file(file = "path_to_your/profile/spectra.mzML",
-                             pattern = "/profile/",
-                             replacement = "/profile_centroided/")
+``` bash
+Rscript inst/scripts/centroiding.R "path_to_your/profile/spectra.mzML" "/profile/" "/profile_centroided/"
+# CentroidR::centroid_one_file(file = "path_to_your/profile/spectra.mzML",
+#                              pattern = "/profile/",
+#                              replacement = "/profile_centroided/")
 ```
 
 ### Docker
