--- a/README.Rmd
+++ b/README.Rmd
@@ -25,6 +25,10 @@ knitr::opts_chunk$set(
 
 Repository to centroid profile spectra.
 
+This repository is experimental.
+Use it at your own risks.
+Inspired from the original work at <https://github.com/EuracBiomedicalResearch/batch_centroid>
+
 ## Requirements
 
 Here is what you *minimally* need:
