--- a/README.Rmd
+++ b/README.Rmd
@@ -69,8 +69,8 @@ Rscript inst/scripts/centroiding.R --file "path_to_your/profile/spectra.mzML" --
 ```r
 "path_to_your/profiles/" |>
     list.files(pattern = ".mzML", full.names = TRUE) |>
-    lapply(
-      FUN = CentroidR::centroid_one_file,
+    purrr::walk(
+      .f = CentroidR::centroid_one_file,
       pattern = "/profiles/",
       replacement = "/profiles_centroided/",
       .progress = TRUE)
