--- a/README.qmd
+++ b/README.qmd
@@ -13,8 +13,7 @@ knitr::opts_chunk$set(
 )
 ```
 
-# CentroidR 
-<!-- <img src='https://raw.githubusercontent.com/adafede/CentroidR/main/man/figures/logo.svg' align="right" height="139" /> -->
+# CentroidR <img src='https://raw.githubusercontent.com/adafede/CentroidR/main/man/figures/logo.svg' align="right" height="139" />
 
 <!-- badges: start -->
 [![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://lifecycle.r-lib.org/articles/stages.html#experimental)
