--- a/grateful-refs.bib
+++ b/grateful-refs.bib
@@ -1,11 +1,3 @@
-@Manual{base,
-title = {{R}: A Language and Environment for Statistical Computing},
-  author = {{R Core Team}},
-  organization = {R Foundation for Statistical Computing},
-  address = {Vienna, Austria},
-  year = {2025},
-  url = {https://www.R-project.org/},
-}
 @Manual{BiocManager,
 title = {{BiocManager}: Access the Bioconductor Project Package Repository},
   author = {Martin Morgan and Marcel Ramos},
@@ -30,11 +22,39 @@ title = {{BiocVersion}: Set the appropriate version of Bioconductor packages},
   url = {https://bioconductor.org/packages/BiocVersion},
   doi = {10.18129/B9.bioc.BiocVersion},
 }
-@Manual{grateful,
-title = {{grateful}: Facilitate citation of {R} packages},
-  author = {Francisco Rodriguez-Sanchez and Connor P. Jackson},
-  year = {2024},
-  url = {https://pakillo.github.io/grateful/},
+@Manual{CentroidR,
+title = {{CentroidR}: CentroidR provides the infrastructure to centroid profile spectra},
+  author = {Adriano Rutz and Johannes Rainer},
+  year = {2025},
+  note = {R package, version 0.0.9000},
+}
+@Article{MsCoreUtils,
+  title = {A Modular and Expandable Ecosystem for Metabolomics Data Annotation in R},
+  author = {Johannes Rainer and Andrea Vicini and Liesa Salzer and Jan Stanstrup and Josep M. Badia and Steffen Neumann and Michael A. Stravs and Vinicius {Verri Hernandes} and Laurent Gatto and Sebastian Gibb and Michael Witting},
+  journal = {Metabolites},
+  year = {2022},
+  doi = {10.3390/metabo12020173},
+  url = {https://www.mdpi.com/2218-1989/12/2/173},
+  volume = {12},
+  pages = {173},
+}
+@Article{Spectra,
+  title = {A Modular and Expandable Ecosystem for Metabolomics Data Annotation in R},
+  author = {Johannes Rainer and Andrea Vicini and Liesa Salzer and Jan Stanstrup and Josep M. Badia and Steffen Neumann and Michael A. Stravs and Vinicius {Verri Hernandes} and Laurent Gatto and Sebastian Gibb and Michael Witting},
+  journal = {Metabolites},
+  year = {2022},
+  doi = {10.3390/metabo12020173},
+  url = {https://www.mdpi.com/2218-1989/12/2/173},
+  volume = {12},
+  pages = {173},
+}
+@Manual{base,
+title = {{R}: A Language and Environment for Statistical Computing},
+  author = {{R Core Team}},
+  organization = {R Foundation for Statistical Computing},
+  address = {Vienna, Austria},
+  year = {2025},
+  url = {https://www.R-project.org/},
 }
 @Manual{knitr2025,
 title = {{knitr}: A General-Purpose Package for Dynamic Report Generation in {R}},
@@ -71,16 +91,6 @@ title = {{logger}: A Lightweight, Modern and Flexible Logging Utility},
   note = {R package version 0.4.0},
   url = {https://CRAN.R-project.org/package=logger},
   doi = {10.32614/CRAN.package.logger},
-}
-@Article{MsCoreUtils,
-  title = {A Modular and Expandable Ecosystem for Metabolomics Data Annotation in R},
-  author = {Johannes Rainer and Andrea Vicini and Liesa Salzer and Jan Stanstrup and Josep M. Badia and Steffen Neumann and Michael A. Stravs and Vinicius {Verri Hernandes} and Laurent Gatto and Sebastian Gibb and Michael Witting},
-  journal = {Metabolites},
-  year = {2022},
-  doi = {10.3390/metabo12020173},
-  url = {https://www.mdpi.com/2218-1989/12/2/173},
-  volume = {12},
-  pages = {173},
 }
 @Article{mzR2012,
   author = {{Chambers} and Matthew C. and {Maclean} and {Brendan} and {Burke} and {Robert} and {Amodei} and {Dario} and {Ruderman} and Daniel L. and {Neumann} and {Steffen} and {Gatto} and {Laurent} and {Fischer} and {Bernd} and {Pratt} and {Brian} and {Egertson} and {Jarrett} and {Hoff} and {Katherine} and {Kessner} and {Darren} and {Tasman} and {Natalie} and {Shulman} and {Nicholas} and {Frewen} and {Barbara} and {Baker} and Tahmina A. and {Brusniak} and {Mi-Youn} and {Paulse} and {Christopher} and {Creasy} and {David} and {Flashner} and {Lisa} and {Kani} and {Kian} and {Moulding} and {Chris} and {Seymour} and Sean L. and {Nuwaysir} and Lydia M. and {Lefebvre} and {Brent} and {Kuhlmann} and {Frank} and {Roark} and {Joe} and {Rainer} and {Paape} and {Detlev} and {Suckau} and {Hemenway} and {Tina} and {Huhmer} and {Andreas} and {Langridge} and {James} and {Connolly} and {Brian} and {Chadick} and {Trey} and {Holly} and {Krisztina} and {Eckels} and {Josh} and {Deutsch} and Eric W. and {Moritz} and Robert L. and {Katz} and Jonathan E. and {Agus} and David B. and {MacCoss} and {Michael} and {Tabb} and David L. and {Mallick} and {Parag}},
@@ -171,16 +181,6 @@ title = {{rmarkdown}: Dynamic Documents for R},
   year = {2020},
   isbn = {9780367563837},
   url = {https://bookdown.org/yihui/rmarkdown-cookbook},
-}
-@Article{Spectra,
-  title = {A Modular and Expandable Ecosystem for Metabolomics Data Annotation in R},
-  author = {Johannes Rainer and Andrea Vicini and Liesa Salzer and Jan Stanstrup and Josep M. Badia and Steffen Neumann and Michael A. Stravs and Vinicius {Verri Hernandes} and Laurent Gatto and Sebastian Gibb and Michael Witting},
-  journal = {Metabolites},
-  year = {2022},
-  doi = {10.3390/metabo12020173},
-  url = {https://www.mdpi.com/2218-1989/12/2/173},
-  volume = {12},
-  pages = {173},
 }
 @Article{testthat,
   author = {Hadley Wickham},
